RESOLVED FIXED97635
[EFL] Fix the typo in the ewk_view_fullscreen_exit()
https://bugs.webkit.org/show_bug.cgi?id=97635
Summary [EFL] Fix the typo in the ewk_view_fullscreen_exit()
Jinwoo Song
Reported 2012-09-25 23:29:43 PDT
Fix the silly typo in the ewk_view_fullscreen_exit() API.
Attachments
Patch (1.49 KB, patch)
2012-09-25 23:31 PDT, Jinwoo Song
no flags
Jinwoo Song
Comment 1 2012-09-25 23:31:31 PDT
Gyuyoung Kim
Comment 2 2012-09-25 23:43:20 PDT
I missed it. I'm sorry.
WebKit Review Bot
Comment 3 2012-09-26 00:33:08 PDT
Comment on attachment 165737 [details] Patch Clearing flags on attachment: 165737 Committed r129603: <http://trac.webkit.org/changeset/129603>
WebKit Review Bot
Comment 4 2012-09-26 00:33:11 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.