[EFL] Fix the typo in the ewk_view_fullscreen_exit() https://bugs.webkit.org/show_bug.cgi?id=97635

Patch by Jinwoo Song <jinwoo7.song@samsung.com> on 2012-09-26
Reviewed by Gyuyoung Kim.

Fix the silly typo in the ewk_view_fullscreen_exit() API.

* ewk/ewk_view.cpp:
(ewk_view_fullscreen_exit):

Canonical link: https://commits.webkit.org/115619@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@129603 268f45cc-cd09-0410-ab3c-d52691b4dbfc